[package]
name = "jikan-rs"
version = "0.1.0"
authors = ["BrunoVieira319 <brunovieira319@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
percent-encoding = "2.1.0"
jikan_resource_derive = { path = "jikan_resource_derive" }

[dev-dependencies]
lazy_static = "1.4.0"