[package]
name = "jikan-rs"
version = "0.1.0"
description = "asynchronous client to Jikan API"
keywords = ["client", "jikan", "myanimelist", "anime", "manga"]
repository = "https://github.com/bruno319/jikan-rs"
readme = "README.md"
authors = ["bruno319 <brunovieira319@hotmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
percent-encoding = "2.1.0"
jikan_resource_derive = { path = "jikan_resource_derive" }

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
lazy_static = "1.4.0"